update recipes add file css style in all page

--- a/recipes/LavashPizza.html
+++ b/recipes/LavashPizza.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lavash Pizza recipes</title>
+    <link rel="stylesheet" href="../css/stlyesheet.css">
 </head>
 <body>
-    <h1>Lavash Pizza</h1>
-    <a href="../index.html">Home<br></a>
+    <h1 class="title">Lavash Pizza</h1>
+    <div id="Home" ><a  href="../index.html">Home</a></div>
     <img src="../images/LavashPizza.jpg" alt="Lavash Pizza" width="200" height="200">
     <h3>Lavash Pizza</h3>
     <p>Lavash pizza is a quick and easy appetizer. Top lavash flat bread with pizza sauce, mozzarella, and pepperoni for the perfect thin-crust pizza. It's easy to customize—you can add any topping you like.</p>
