--- a/recipes/Pan_Seared_Tilapia.html
+++ b/recipes/Pan_Seared_Tilapia.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pan-Seared Tilapia recipes</title>
+    <link rel="stylesheet" href="../css/stlyesheet.css">
 </head>
 <body>
-    <h1>Pan-Seared Tilapia</h1>
-    <a href="../index.html">Home<br></a>
+    <h1 class="title">Pan-Seared Tilapia</h1>
+    <div id="Home"><a href="../index.html">Home</a></div>
     <img src="../images/PanSearedTilapia.jpg" alt="Pan-Seared Tilapia" width="200" height="200">
     <h3>Pan-Seared Tilapia</h3>
     <p>Learn how to cook tilapia with this easy, 15-minute recipe for pan-seared tilapia that's delicious and full of flavor. This simple method of cooking fish fillets is great for a weeknight meal. Serve with fresh veggies.</p>
