--- a/recipes/Smoky_Grilled_Pork_Chops.html
+++ b/recipes/Smoky_Grilled_Pork_Chops.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smoky Grilled Pork Chops recipes</title>
+    <link rel="stylesheet" href="../css/stlyesheet.css">
 </head>
 <body>
-    <h1>Smoky Grilled Pork Chops</h1>
-    <a href="../index.html">Home<br></a>
-    <img src="../images/SmokyGrilledPorkChops.jpg" alt="Smoky Grilled Pork Chops" width="200" height="200">
+    <h1 class="title">Smoky Grilled Pork Chops</h1>
+    <div id="Home"><a href="../index.html">Home</a></div>
+    <div class="backgroundcontent"><img src="../images/SmokyGrilledPorkChops.jpg" alt="Smoky Grilled Pork Chops" width="200" height="200">
     <h3>Smoky Grilled Pork Chops</h3>
     <p>These tasty grilled pork chops are flavored with an easy homemade seasoning rub for a spicy, smoky flavor. They're quick to prep and always a favorite at BBQ parties.</p>
     <h3>Ingredients</h3>
@@ -30,5 +31,6 @@
         <li>Cook chops on the preheated grill over indirect heat until no longer pink inside, about 12 minutes per side. An instant-read thermometer should read at least 145 degrees F (63 degrees C).</li>
         <li>Let stand for 10 minutes before serving.</li>
     </ol>
+    </div>
 </body>
 </html>
